window: Don't misplace the notebook popup on Wayland

Fallout from 0820b3853a3b7c629a93fa820d5372eac1760686

https://bugzilla.gnome.org/show_bug.cgi?id=794935
(cherry picked from commit ebc2db30526c9a033c7d1de6292044cac1105b1c)